--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -360,6 +360,7 @@ header .container .search-cart-login .cart .cart-drop .cd-top {
   border-bottom: solid 0.5px rgb(240, 240, 240);
 }
 header .container .search-cart-login .cart .cart-drop .cd-mid {
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -367,10 +368,42 @@ header .container .search-cart-login .cart .cart-drop .cd-mid {
   width: 100%;
 }
 header .container .search-cart-login .cart .cart-drop .cd-mid ul {
+  width: 100%;
+  height: 100%;
   list-style: none;
   padding: 0;
   margin: 0;
   color: gray;
+}
+header .container .search-cart-login .cart .cart-drop .cd-mid ul li.when-empty {
+  position: relative;
+  top: 50%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+header .container .search-cart-login .cart .cart-drop .cd-mid ul li.text {
+  padding: 15px 0 75px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  border-bottom: solid 0.5px rgb(240, 240, 240);
+}
+header .container .search-cart-login .cart .cart-drop .cd-mid ul li.text .image {
+  width: 30%;
+}
+header .container .search-cart-login .cart .cart-drop .cd-mid ul li.text .image img {
+  width: 100px;
+  height: 100px;
+}
+header .container .search-cart-login .cart .cart-drop .cd-mid ul li.text .delete {
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+header .container .search-cart-login .cart .cart-drop .cd-mid ul li.text .delete i {
+  font-size: 15px;
 }
 header .container .search-cart-login .cart .cart-drop .cd-btm {
   position: sticky;
