--- a/assets/css/cartStyle.css
+++ b/assets/css/cartStyle.css
@@ -1,1 +1,112 @@
-/*# sourceMappingURL=cartStyle.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+section#cart .container {
+  max-width: 1200px;
+  width: 100%;
+}
+section#cart .container .when-empty {
+  display: none;
+  height: 70px;
+  margin-bottom: 40px;
+}
+section#cart .container .when-empty .cart-empty {
+  display: flex;
+  vertical-align: top;
+  width: 50%;
+  color: #888;
+}
+section#cart .container .when-empty .cart-empty h4 {
+  font-size: 14px;
+  font-weight: 400;
+}
+section#cart .container .when-empty .contunie {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+section#cart .container .when-empty .contunie button {
+  border: none;
+  background-color: #232323;
+  padding: 8px 20px;
+  transition: 0.5s;
+}
+section#cart .container .when-empty .contunie button a {
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+}
+section#cart .container .when-empty .contunie button:hover {
+  background-color: #eb4d4b;
+}
+section#cart .container .cart-table {
+  display: none;
+  margin-bottom: 50px;
+  border: solid 0.5px rgb(230, 230, 230);
+}
+section#cart .container .cart-table thead {
+  background-color: rgb(245, 245, 245);
+}
+section#cart .container .cart-table thead tr th {
+  vertical-align: middle;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  padding: 10px 15px;
+  border: solid 0.5px rgb(230, 230, 230);
+}
+section#cart .container .cart-table tbody tr {
+  border: solid 0.5px rgb(230, 230, 230);
+}
+section#cart .container .cart-table tbody tr td {
+  vertical-align: middle;
+  font-size: 13px;
+  font-weight: 500;
+  padding: 10px 15px;
+  border: solid 0.5px rgb(230, 230, 230);
+}
+section#cart .container .cart-table tbody tr td:first-child {
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+  border: none;
+}
+section#cart .container .cart-table tbody tr td:first-child img {
+  border: solid 0.5px rgb(230, 230, 230);
+}
+section#cart .container .cart-table tbody tr td:nth-child(4) input {
+  width: 65px;
+  height: 35px;
+  border-radius: 0px;
+  border: solid 0.5px rgb(230, 230, 230);
+  outline: none;
+  padding-left: 10px;
+}
+section#cart .container .cart-table tbody tr td:nth-child(4) button {
+  margin: 0;
+  width: 40px;
+  height: 35px;
+  border: none;
+  background-color: #232323;
+  margin-left: -5px;
+}
+section#cart .container .cart-table tbody tr td:nth-child(4) button:hover {
+  background-color: #eb4d4b;
+}
+section#cart .container .cart-table tbody tr td:nth-child(4) button i {
+  color: white;
+}
+section#cart .container .cart-table tbody tr td:nth-child(4) button:nth-child(2) {
+  transition: 0.5s;
+}
+section#cart .container .cart-table tbody tr td:nth-child(4) button:nth-child(3) {
+  background-color: #eb4d4b;
+}
+section#cart .container .cart-table tbody tr td:nth-child(4) button:nth-child(3):hover {
+  background-color: #c12f2d;
+}/*# sourceMappingURL=cartStyle.css.map */
