--- a/assets/css/categoryStyle.css
+++ b/assets/css/categoryStyle.css
@@ -1,1 +1,582 @@
-/*# sourceMappingURL=categoryStyle.css.map */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+#collection {
+  margin-top: 100px;
+}
+#collection .left .collection_ctgr {
+  padding-bottom: 5px;
+  border: 1px solid #dfdfdf;
+}
+#collection .left .collection_ctgr h5 {
+  color: #555;
+  background-color: #f5f5f5;
+  padding: 10px;
+}
+#collection .left .collection_refine {
+  margin-top: 30px;
+  border: 1px solid #dfdfdf;
+}
+#collection .left .collection_refine h5 {
+  color: #555;
+  background-color: #f5f5f5;
+  padding: 10px;
+}
+#collection .left .collection_refine .buttons {
+  transition: 0.7s;
+  border: none;
+  margin-top: 20px;
+  margin: 20px 10px 15px;
+  border-radius: 0;
+  background-color: #232323;
+  height: 34px;
+  display: flex;
+  justify-content: center;
+}
+#collection .left .collection_refine .buttons:hover {
+  background-color: #eb4d4b;
+}
+#collection .left .collection_refine .items {
+  padding-left: 10px;
+}
+#collection .left .collection_refine .items label {
+  color: #888;
+  margin-left: 3px;
+}
+#collection .left .collections_lastsellers {
+  margin-top: 403px;
+}
+#collection .left .collections_bestsellers {
+  margin-top: 30px;
+}
+#collection .left .collections_bestsellers,
+#collection .left .collections_lastsellers {
+  border: 1px solid #dfdfdf;
+}
+#collection .left .collections_bestsellers h5,
+#collection .left .collections_lastsellers h5 {
+  color: #555;
+  background-color: #f5f5f5;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px;
+}
+#collection .left .collections_bestsellers .device .image,
+#collection .left .collections_lastsellers .device .image {
+  padding: 10px;
+  display: flex;
+  width: 85px;
+  height: 85px;
+}
+#collection .left .collections_bestsellers .device .image img,
+#collection .left .collections_lastsellers .device .image img {
+  width: 100%;
+  height: 100%;
+}
+#collection .left .collections_bestsellers .device .text,
+#collection .left .collections_lastsellers .device .text {
+  margin-left: 10px;
+}
+#collection .left .collections_bestsellers .device .text span,
+#collection .left .collections_lastsellers .device .text span {
+  display: block;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+}
+#collection .left .collections_bestsellers .device .text .red,
+#collection .left .collections_lastsellers .device .text .red {
+  color: #eb4d4b;
+  font-weight: 500;
+}
+#collection .left .collections_bestsellers .device .text .price,
+#collection .left .collections_lastsellers .device .text .price {
+  display: flex;
+}
+#collection .left .collections_bestsellers .device .text .price .line,
+#collection .left .collections_lastsellers .device .text .price .line {
+  margin-left: 3px;
+  color: #888;
+  text-decoration: line-through;
+}
+#collection .left .big_discount {
+  margin-top: 30px;
+}
+#collection .left .big_discount .image {
+  position: relative;
+}
+#collection .left .big_discount .image img {
+  width: 100%;
+  position: absolute;
+}
+#collection .left .big_discount .image .img {
+  width: 0;
+  height: 0;
+  top: 160px;
+  left: 145px;
+  transition: 0.5s all;
+  position: absolute;
+}
+#collection .left .big_discount .image:hover .img {
+  width: 260px;
+  height: 360px;
+  top: 0;
+  left: 0;
+  transform: rotateZ(180deg);
+  background-color: rgba(156, 150, 150, 0.2470588235);
+}
+#collection .left .showPages {
+  margin-top: 30px;
+  padding: 8px 16px;
+  background-color: #f5f5f5;
+}
+#collection .left .showPages p {
+  padding-top: 14px;
+}
+#collection .layout {
+  background-color: rgba(230, 230, 230, 0.493);
+  margin: 0 10px;
+}
+#collection .layout .icons {
+  padding: 20px 0 0 25px;
+  overflow: hidden;
+}
+#collection .layout .icons .grid:hover i {
+  transform: rotateY(360deg);
+}
+#collection .layout .icons .grid i {
+  overflow: hidden;
+  color: #333;
+  padding: 2px 6px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+  animation-duration: 0.2s;
+}
+@media screen and (max-width: 821px) {
+  #collection .layout .icons .grid i {
+    font-size: 18px;
+  }
+}
+#collection .layout .icons p {
+  margin-left: 6px;
+}
+#collection .layout .icons p a {
+  color: #333;
+  text-decoration: none;
+  transition: 0.3s;
+}
+#collection .layout .icons p a:hover {
+  color: #eb4d4b;
+}
+#collection .layout .sort_show {
+  align-items: center;
+}
+@media screen and (max-width: 391px) {
+  #collection .layout .sort_show div {
+    margin-bottom: 17px;
+  }
+}
+#collection .layout .sort_show div label {
+  margin: 0 10px 0 18px;
+  font-size: 15px;
+  color: #333;
+}
+@media screen and (max-width: 821px) {
+  #collection .layout .sort_show div label {
+    font-size: 13px;
+  }
+}
+#collection .layout .sort_show div select {
+  border: 1px solid lightgray;
+  color: gray;
+  font-size: 15px;
+  padding: 2px;
+}
+@media screen and (max-width: 821px) {
+  #collection .layout .sort_show div select {
+    font-size: 12px;
+  }
+}
+#collection .layout .sort_show div select:focus {
+  outline: none;
+}
+#collection .layout .sort_show div select option {
+  color: gray;
+}
+#collection .first_page .right .device {
+  padding: 0px;
+  height: 270px;
+  position: relative;
+}
+#collection .first_page .right .device .image {
+  height: 100%;
+  position: relative;
+  cursor: pointer;
+}
+#collection .first_page .right .device .image img {
+  width: 100%;
+  height: 100%;
+}
+#collection .first_page .right .device .image .first {
+  position: absolute;
+  opacity: 1;
+  transition: 1s all;
+}
+#collection .first_page .right .device .image .second {
+  position: absolute;
+  opacity: 0;
+  transition: 1s all;
+}
+#collection .first_page .right .device .image:hover .first {
+  opacity: 0;
+  transform: rotateY(180deg);
+}
+#collection .first_page .right .device .image:hover .second {
+  opacity: 1;
+  transform: rotateY(180deg);
+}
+#collection .first_page .right .device .rating {
+  position: absolute;
+  bottom: 8px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+#collection .first_page .right .device .rating .yellow {
+  color: yellow;
+}
+#collection .first_page .right .device .buttons {
+  position: absolute;
+  left: auto;
+  right: 13px;
+  top: -36px;
+  display: block;
+}
+#collection .first_page .right .device .buttons .allbutton {
+  border: 1px solid black;
+  padding: 8px;
+  border-radius: 50%;
+  margin-top: 5px;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s all;
+  cursor: pointer;
+}
+#collection .first_page .right .device .buttons .allbutton:hover {
+  background-color: #eb4d4b;
+}
+#collection .first_page .right .device .allbutton.active {
+  opacity: 1;
+}
+#collection .first_page .right .device .caption {
+  padding: 10px;
+}
+#collection .first_page .right .device .caption .add_cart {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eb4d4b;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  bottom: -77px;
+  transition: 0.5s all;
+  overflow: hidden;
+  opacity: 0;
+  height: 35px;
+  width: 120px;
+  cursor: pointer;
+}
+#collection .first_page .right .device .caption .add_cart.active {
+  opacity: 1;
+}
+#collection .first_page .right .device .caption .description {
+  margin-bottom: 10px;
+}
+#collection .first_page .right .device .caption .price {
+  color: #eb4d4b;
+  font-size: 16px;
+  margin-bottom: 5px;
+  transition: all 0.4s;
+  opacity: 1;
+}
+@media screen and (max-width: 821px) {
+  #collection .first_page .right {
+    display: flex;
+    justify-content: center;
+    padding: 60px;
+  }
+  #collection .first_page .right .device {
+    width: 205px;
+    height: 205px;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .first_page .right {
+    padding: 60px;
+    display: flex;
+    justify-content: center;
+  }
+  #collection .first_page .right .device {
+    width: 205px;
+    height: 205px;
+  }
+}
+#collection .second_page {
+  display: none;
+}
+#collection .second_page .devices .device {
+  position: relative;
+  top: 15px;
+  overflow: hidden;
+  margin: 15px 0;
+}
+#collection .second_page .devices .device .device_icons {
+  position: absolute;
+  z-index: 1;
+  left: 248px;
+  top: 0;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .device_icons {
+    left: 25px;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .second_page .devices .device .device_icons {
+    top: 2px;
+    right: 6px;
+  }
+}
+#collection .second_page .devices .device .device_icons div {
+  cursor: pointer;
+  display: none;
+  width: 36px;
+  height: 36px;
+  margin-top: 10px;
+  background-color: white;
+  text-align: center;
+  border-radius: 50%;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+  transition: 0.5s;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .device_icons div {
+    width: 33px;
+    height: 33px;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .second_page .devices .device .device_icons div {
+    width: 15px;
+    height: 15px;
+    margin-top: 7px;
+  }
+}
+#collection .second_page .devices .device .device_icons div:hover {
+  background-color: #eb4d4b;
+  color: white;
+}
+#collection .second_page .devices .device .device_icons div i {
+  margin-top: 10px;
+  font-size: 20px;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .device_icons div i {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .second_page .devices .device .device_icons div i {
+    position: relative;
+    top: -8px;
+    font-size: 7px;
+    margin-top: 0;
+  }
+}
+#collection .second_page .devices .device .image {
+  overflow: hidden;
+  position: relative;
+  width: 289.98px;
+  height: 289.98px;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .image {
+    width: 230px;
+    height: 230px;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .second_page .devices .device .image {
+    width: 180px;
+    height: 180px;
+  }
+}
+#collection .second_page .devices .device .image .first {
+  -o-object-fit: contain;
+     object-fit: contain;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: 0.7s;
+  cursor: pointer;
+}
+#collection .second_page .devices .device .image .second {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.7s;
+}
+#collection .second_page .devices .device .image:hover .first {
+  opacity: 0;
+  transform: rotateY(180deg);
+}
+#collection .second_page .devices .device .image:hover .second {
+  opacity: 1;
+  transform: rotateY(180deg);
+}
+#collection .second_page .devices .device .icons {
+  position: absolute;
+  top: 260px;
+  font-size: 13px;
+  width: 100%;
+  left: 110px;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .icons {
+    top: 300px;
+    font-size: 13px;
+    width: 100%;
+    left: 145px;
+    z-index: 2;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .second_page .devices .device .icons {
+    top: 155px;
+    width: 100%;
+    left: 77px;
+    z-index: 2;
+  }
+}
+#collection .second_page .devices .device .icons i {
+  color: #b6b6b6;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .icons i {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .second_page .devices .device .icons i {
+    font-size: 6px;
+  }
+}
+#collection .second_page .devices .device .icons .yellow {
+  color: #fec42d;
+}
+#collection .second_page .devices .device .description {
+  padding: 13px;
+  position: relative;
+}
+#collection .second_page .devices .device .description .title {
+  cursor: pointer;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .description .title {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .description .title {
+    font-size: 8px;
+  }
+}
+#collection .second_page .devices .device .description .about {
+  color: gray;
+}
+#collection .second_page .devices .device .description .price {
+  display: flex;
+  cursor: pointer;
+}
+#collection .second_page .devices .device .description .price .notPrice {
+  margin: 0 7px;
+  color: #787878;
+  text-decoration: initial;
+}
+#collection .second_page .devices .device .description .price .prices {
+  font-weight: 600;
+  color: #eb4d4b;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .description .price .prices {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .second_page .devices .device .description .price .prices {
+    font-size: 8px;
+  }
+}
+#collection .second_page .devices .device .description .add_cart {
+  opacity: 1;
+  position: absolute;
+  top: 135px;
+  left: 20px;
+  background-color: #eb4d4b;
+  height: 37px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .description .add_cart {
+    top: 17px;
+    left: 126px;
+    height: 24px;
+    width: 90px;
+  }
+}
+@media screen and (max-width: 391px) {
+  #collection .second_page .devices .device .description .add_cart {
+    top: 20px;
+    left: 53px;
+    height: 18px;
+    width: 66px;
+  }
+}
+#collection .second_page .devices .device .description .add_cart:hover {
+  background-color: #3b3535;
+}
+#collection .second_page .devices .device .description .add_cart p {
+  color: rgb(240, 233, 233);
+  padding: 6px 20px;
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .description .add_cart p {
+    padding: 6px 17px;
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 821px) {
+  #collection .second_page .devices .device .description .add_cart p {
+    padding: 3px 10px;
+    font-size: 8px;
+  }
+}
+#collection .collections_accordion .collect_title {
+  padding: 5px;
+  background-color: #dfdbdb;
+  display: flex;
+  justify-content: space-between;
+}
+#collection .collections_accordion .collect_title i.active {
+  transform: rotate(180deg);
+}
+#collection .collections_accordion .collect_info {
+  display: none;
+}/*# sourceMappingURL=categoryStyle.css.map */
