--- a/assets/css/loginStyle.css
+++ b/assets/css/loginStyle.css
@@ -1,1 +1,57 @@
-/*# sourceMappingURL=loginStyle.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+section#login-page {
+  margin-bottom: 30px;
+}
+section#login-page .container .row .login {
+  display: flex;
+  justify-content: space-between;
+}
+section#login-page .container .row .login .new-customer {
+  padding: 15px;
+  width: 49%;
+  border: solid 0.5px rgb(230, 230, 230);
+  border-radius: 5px;
+  line-height: 22px;
+}
+section#login-page .container .row .login .new-customer h5 {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 15px;
+  color: #333;
+}
+section#login-page .container .row .login .new-customer h6 {
+  font-size: 14px;
+  margin-bottom: 15px;
+  color: #333;
+}
+section#login-page .container .row .login .new-customer p {
+  font-size: 13px;
+  margin-bottom: 15px;
+  letter-spacing: 0.5px;
+  color: #333;
+}
+section#login-page .container .row .login .new-customer button {
+  border: none;
+  background-color: #232323;
+  padding: 8px 20px;
+  transition: 0.5s;
+}
+section#login-page .container .row .login .new-customer button a {
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+}
+section#login-page .container .row .login .new-customer button:hover {
+  background-color: #eb4d4b;
+}
+section#login-page .container .row .login .returning-customer {
+  padding: 15px;
+  width: 49%;
+  border: solid 0.5px rgb(230, 230, 230);
+}/*# sourceMappingURL=loginStyle.css.map */
