--- a/assets/scss/productStyle.scss
+++ b/assets/scss/productStyle.scss
@@ -192,7 +192,7 @@ section#product-detail{
                         font-size: 13px;
                         line-height: 24px;
                         font-weight: 500;
-                        color: #232323
+                        color: #232323;
                     }
                 }
                 .add-cart{
