--- a/assets/css/registerStyle.css
+++ b/assets/css/registerStyle.css
@@ -1,1 +1,215 @@
-/*# sourceMappingURL=registerStyle.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+section#register .container {
+  max-width: 1200px;
+  width: 100%;
+  padding: 0 25px;
+}
+section#register .container .row .left-bar {
+  width: 23%;
+  padding: 0;
+}
+section#register .container .row .left-bar .categories {
+  border: solid 0.5px rgb(230, 230, 230);
+  margin-bottom: 30px;
+}
+section#register .container .row .left-bar .categories .head {
+  padding: 15px;
+  background-color: whitesmoke;
+}
+section#register .container .row .left-bar .categories .head h5 {
+  margin: 0;
+  color: #222;
+  letter-spacing: 1px;
+  font-size: 16px;
+  font-weight: 400;
+}
+section#register .container .row .left-bar .categories .body {
+  padding: 0 15px;
+}
+section#register .container .row .left-bar .categories .body ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+section#register .container .row .left-bar .categories .body ul li {
+  line-height: 35px;
+  font-size: 14px;
+}
+section#register .container .row .left-bar .bestsellers {
+  border: solid 0.5px rgb(230, 230, 230);
+  margin-bottom: 30px;
+}
+section#register .container .row .left-bar .bestsellers .head {
+  padding: 15px;
+  background-color: whitesmoke;
+}
+section#register .container .row .left-bar .bestsellers .head h5 {
+  margin: 0;
+  color: #222;
+  letter-spacing: 1px;
+  font-size: 16px;
+  font-weight: 400;
+}
+section#register .container .row .left-bar .bestsellers .body {
+  padding: 15px;
+}
+section#register .container .row .left-bar .bestsellers .body .products {
+  display: flex;
+  margin-bottom: 15px;
+}
+section#register .container .row .left-bar .bestsellers .body .products .product-detail {
+  margin-left: 10px;
+}
+section#register .container .row .left-bar .bestsellers .body .products .product-detail h6 {
+  font-size: 15px;
+  font-weight: 400;
+}
+section#register .container .row .left-bar .bestsellers .body .products .product-detail span {
+  color: #EB4D50;
+  font-size: 14px;
+  font-weight: 500;
+}
+section#register .container .row .left-bar .latest-products {
+  border: solid 0.5px rgb(230, 230, 230);
+  margin-bottom: 30px;
+}
+section#register .container .row .left-bar .latest-products .head {
+  padding: 15px;
+  background-color: whitesmoke;
+}
+section#register .container .row .left-bar .latest-products .head h5 {
+  margin: 0;
+  color: #222;
+  letter-spacing: 1px;
+  font-size: 16px;
+  font-weight: 400;
+}
+section#register .container .row .left-bar .latest-products .body {
+  padding: 15px;
+}
+section#register .container .row .left-bar .latest-products .body .products {
+  display: flex;
+  margin-bottom: 15px;
+}
+section#register .container .row .left-bar .latest-products .body .products .product-detail {
+  margin-left: 10px;
+}
+section#register .container .row .left-bar .latest-products .body .products .product-detail h6 {
+  font-size: 15px;
+  font-weight: 400;
+}
+section#register .container .row .left-bar .latest-products .body .products .product-detail span {
+  color: #EB4D50;
+  font-size: 14px;
+  font-weight: 500;
+}
+section#register .container .row .left-bar .latest-products .body .products .product-detail .discount {
+  text-decoration: line-through;
+  color: #888;
+}
+section#register .container .row .registration {
+  width: 75%;
+  margin-left: 20px;
+}
+section#register .container .row .registration p {
+  padding: 10px 0;
+  text-align: center;
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border: solid 1px #faebcc;
+  font-size: 14px;
+  font-weight: 400;
+}
+section#register .container .row .registration p a {
+  text-decoration: none;
+  color: #222;
+}
+section#register .container .row .registration p a:hover {
+  color: #EB4D50;
+}
+section#register .container .row .registration form div {
+  margin-top: 20px;
+}
+section#register .container .row .registration form div h4 {
+  margin-bottom: 15px;
+  border-bottom: solid 1px #e9e9e9;
+  color: #232323;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 7px 0;
+}
+section#register .container .row .registration form div div {
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+section#register .container .row .registration form div div label {
+  letter-spacing: 0.5px;
+  width: 16%;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 500;
+}
+section#register .container .row .registration form div div input {
+  width: 83%;
+  border-radius: 0px;
+  outline: none;
+  border: solid 1px #e9e9e9;
+  padding: 6px 12px;
+}
+section#register .container .row .registration form div div input::-moz-placeholder {
+  font-size: 12px;
+}
+section#register .container .row .registration form div div input::placeholder {
+  font-size: 12px;
+}
+section#register .container .row .registration form div div:last-child {
+  justify-content: left;
+  margin: 0;
+}
+section#register .container .row .registration form div div:last-child input {
+  font-size: 14px;
+  font-weight: 400;
+  margin-right: 10px;
+}
+section#register .container .row .registration form div div:last-child input:nth-child(2) {
+  margin-left: 10px;
+}
+section#register .container .row .registration .privacy-policy {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+section#register .container .row .registration .privacy-policy p {
+  margin: 0 5px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  width: -moz-max-content;
+  width: max-content;
+  font-weight: 400;
+  color: #7a7a7a;
+  font-size: 14px;
+}
+section#register .container .row .registration .privacy-policy p a {
+  font-weight: 700;
+}
+section#register .container .row .registration .privacy-policy input {
+  margin-right: 10px;
+}
+section#register .container .row .registration .privacy-policy button {
+  border: none;
+  background-color: #232323;
+  padding: 10px 20px;
+  transition: 0.5s;
+  color: white;
+}
+section#register .container .row .registration .privacy-policy button:hover {
+  background-color: #EB4D50;
+}/*# sourceMappingURL=registerStyle.css.map */
