--- a/assets/scss/cartStyle.scss
+++ b/assets/scss/cartStyle.scss
@@ -5,6 +5,7 @@
 }
 
 section#cart{
+    margin-bottom: 30px;
     .container{
         max-width: 1200px;
         width: 100%;
@@ -113,5 +114,199 @@ section#cart{
                 }
             } 
         }
+        .to-do-next{
+            display: none;
+            margin-bottom: 40px;
+            h6{
+                font-weight: 500;
+                font-size: 18px;
+            }
+            p{
+                color: #888;
+                font-size: 14px;
+                font-weight: 400;
+            }
+            .accordion-total{
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                .accordion{
+                    width: 62%;
+                    .step-item{
+                        margin-bottom: 5px;
+                        .step-top{
+                            cursor: pointer;
+                            background-color: whitesmoke;
+                            border: solid 0.5px #e9e9e9;
+                            padding: 10px 15px;
+                            font-weight: 500;
+                            font-size: 14px;
+                        }
+                        .step-bottom{
+                            display: none;
+                            border: solid 0.5px #e9e9e9;
+                            border-top: none;
+                            padding: 15px;
+                            p{
+                                font-weight: 400;
+                                color: #232323;
+                                font-size: 14px;
+                                margin: 0 0 5px;
+                            }
+                        }
+                    }
+                    #step-1{
+                        .step-bottom{
+                            .apply{
+                                display: flex;
+                                input{
+                                    width: 83%;
+                                    height: 34px;
+                                    padding: 6px 12px;     
+                                    border-radius: 0px;
+                                    outline: none;           
+                                    border: 1px solid #e9e9e9;    
+                                    &::placeholder{
+                                        font-size: 12px;
+                                        color: #9c9b9b;
+                                    }                    
+                                }
+                                button{
+                                    border: 1px solid #232323;    
+                                    line-height: 16px;                    
+                                    font-size: 12px;
+                                    padding: 8px 14px;
+                                    background-color: #232323;
+                                    color: white;
+                                }
+                            }
+                        }
+                    }
+                    #step-2{
+                        .step-bottom{
+                            .get-quotes{
+                                div{
+                                    margin-bottom: 20px;
+                                    label{
+                                        margin-bottom: 5px;
+                                        font-size: 14px;
+                                        font-weight: 400;
+                                        width: 100%;
+                                        padding: 0;
+                                        color: #232323;
+                                        text-align: left;
+                                    }
+                                    select{
+                                        width: 100%;
+                                        border-radius: 0px;
+                                        border: solid 0.5px #e9e9e9;
+                                        color: #888;
+                                        height: 35px;
+                                        padding: 0 5px;
+                                        font-size: 12px;
+                                        outline: none;
+                                    }
+                                    input{
+                                        width: 100%;
+                                        height: 34px;
+                                        padding: 6px 12px;     
+                                        border-radius: 0px;
+                                        outline: none;           
+                                        border: 1px solid #e9e9e9;    
+                                        &::placeholder{
+                                        font-size: 12px;
+                                        color: #9c9b9b;
+                                        }     
+                                    }
+                                }
+                                button{
+                                    font-size: 14px;
+                                    font-weight: 400;
+                                    padding: 10px 20px;
+                                    border: none;
+                                    background-color: #232323;
+                                    color: white;
+                                }
+                            }
+                        }
+                    }
+                    #step-3{
+                        .step-bottom{
+                            .apply{
+                                display: flex;
+                                input{
+                                    width: 78%;
+                                    height: 34px;
+                                    padding: 6px 12px;     
+                                    border-radius: 0px;
+                                    outline: none;           
+                                    border: 1px solid #e9e9e9;    
+                                    &::placeholder{
+                                        font-size: 12px;
+                                        color: #9c9b9b;
+                                    }                    
+                                }
+                                button{
+                                    border: 1px solid #232323;    
+                                    line-height: 16px;                    
+                                    font-size: 12px;
+                                    padding: 8px 14px;
+                                    background-color: #232323;
+                                    color: white;
+                                }
+                            }
+                        }
+                    }
+                }
+                .total{
+                    width: 35%;
+                    height: max-content;
+                    border: solid 0.5px #e9e9e9;
+                    table{
+                        width: 100%;
+                        tr{
+                              border: solid 0.5px #e9e9e9;
+                            td{
+                                font-weight: 500;
+                                font-size: 15px;
+                                border: solid 0.5px #e9e9e9;
+                                padding: 10px;
+                                text-align: right;
+                                &:first-child{
+                                    width: 60%;
+                                }
+                                &:nth-child(2){
+                                    color: #333;
+                                    font-weight: 400;
+                                    font-size: 13px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .buttons{
+                margin-top: 40px;
+                display: flex;
+                justify-content: space-between;
+                button{
+                    border: none;
+                    padding: 10px 20px;
+                    background-color: #eb4d4b;
+                    color: white;
+                    transition: 0.5s;
+                    &:hover{
+                        background-color: #232323;
+                    }
+                    &:nth-child(2){
+                        background-color: #232323;
+                        &:hover{
+                            background-color: #eb4d4b;
+                        }
+                    }
+                }
+            }
+        }
+
     }
 }
