--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -52,6 +52,7 @@ div#mini-head{
                                 padding: 10px 0;
                             }
                             .sect-down{
+                                display: none;
                                 padding-left: 15px;
                                 border: none;
                                 padding-bottom: 15px;
@@ -190,7 +191,7 @@ header{
             padding-right: 60px;
             nav{
                 justify-content: center;
-                #product-page-nav{
+                #other-page-nav{
                         li{
                             a{
                             color: #232323;
@@ -261,7 +262,7 @@ header{
                                         line-height: 30px;
                                         a{
                                             font-size: 14px;
-                                            color: gray;
+                                            color: gray!important;
                                             padding: 0px;
                                             &:hover{
                                                 color: black;
@@ -519,7 +520,7 @@ header{
                 }
             }
         }
-        #product-nav-icon.search-cart-login{
+        #other-nav-icon.search-cart-login{
             svg{
                 fill:#232323;
                 transition: 0.5s;
