--- a/assets/scss/homeStyle.scss
+++ b/assets/scss/homeStyle.scss
@@ -673,33 +673,17 @@ section#customers{
                 }
             }
         }
-        
-        .owl-theme .owl-dots{
-            display: flex;
-            justify-content: center;
+        .owl-carousel .owl-nav button{
+            color: white;
+            background-color: #eb4d4b;
+            border-radius: 50%;
+            width: 35px;
+            height: 35px;
+            opacity: 1;
             margin-top: 20px;
-            .owl-dot{
-                display: inline-block;
-                zoom: 1;
-                *display: inline;
-                span{
-                    width: 35px;
-                    height: 35px;
-                    margin: 5px 7px;
-                    background:  rgb(235, 77, 75);
-                    display: block;
-                    transition: 0.5s;
-                    border-radius: 30px;
-                    &:hover{
-                        background-color: #232323;
-                    }
-                }
-            }
-        }
-        .owl-carousel{
-            position: relative;
-            .owl-stage-outer{
-                overflow: hidden;
+            transition: 0.5s;
+            &:hover{
+                background-color: #232323;
             }
         }
         .item{
@@ -903,6 +887,19 @@ section#latest{
                 }
             }
         }
+        .owl-carousel .owl-nav button{
+            color: white;
+            background-color: #eb4d4b;
+            border-radius: 50%;
+            width: 35px;
+            height: 35px;
+            opacity: 1;
+            margin-top: 20px;
+            transition: 0.5s;
+            &:hover{
+                background-color: #232323;
+            }
+        }
         .category{
             ul{
                 list-style: none;
@@ -938,6 +935,7 @@ section#latest{
                     padding: 15px 15px 0;
                     text-align: center;
                     .image{
+                        overflow: hidden;
                         position: relative;
                         height: 355px;
                         img{
@@ -972,11 +970,61 @@ section#latest{
                             }
                         }
                         .wish-view{
+                            position: absolute;
+                            right: 10px;
+                            top: 10px;
+                            transition: 0.5s;
+                            // opacity: 0;
                             .icon{
+                                background-color: white;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
                                 width: 40px;
                                 height: 40px;
+                                margin-bottom: 10px;
+                                border-radius: 50%;
+                                box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.5);
+                                transition: 0.5s;
+                                &:hover{
+                                    background-color: #eb4d4b;
+                                    fill: white;
+                                }
+                            }
+                            .view{
+                              position: relative;
+                              right: -60px;
+                              transition-delay: 0.3s;
+                              transition: 0.3s;
+                              opacity: 0;
+                            }
+                            .wish{
+                              position: relative;
+                              right: -60px;
+                              transition-delay: 0.6s;
+                              transition: 0.6s;
+                              opacity: 0;
+                            }
+                            .compare{
+                              position: relative;
+                              right: -60px;
+                              transition-delay: 0.9s;
+                              transition: 0.9s;
+                              opacity: 0;
                             }
                         }
+                    }
+                    &:hover .view{
+                      transform: translateX(-60px);
+                      opacity: 1!important;
+                    }
+                    &:hover .wish{
+                      transform: translateX(-60px);
+                      opacity: 1!important;
+                    }
+                    &:hover .compare{
+                      transform: translateX(-60px);
+                      opacity: 1!important;
                     }
                     .caption{
                         padding: 10px;
