--- a/assets/scss/productStyle.scss
+++ b/assets/scss/productStyle.scss
@@ -4,31 +4,6 @@
     box-sizing: border-box;
 }
 
-section#go-home{
-    background-image: url(/assets/images/products/breadcrumb.png);
-    background-attachment: fixed;
-    background-size: calc(160%);
-    background-position: -350px -50px;
-    display: flex;
-    justify-content: center;
-    padding: 65px 15px;
-    font-size: 15px;
-    font-weight: 400;
-    margin-bottom: 30px;
-    a{
-        text-decoration: none;
-        color: #232323;
-        i{
-            font-size: 12px;
-            &:hover{
-                color: #eb4d4b;
-            }
-        }
-        &:hover{
-            color: #eb4d4b;
-        }
-    }
-}
 section#product-detail{
     display: flex;
     .container{
@@ -53,10 +28,34 @@ section#product-detail{
                 }
                 .mini-photo-description{
                     padding: 0 10px;
+                    position: relative;
                     .mini-photos{
                         margin-bottom: 20px;
                         .item{
                             border: solid 0.5px rgb(230, 230, 230);
+                        }
+                    }
+                    .owl-carousel .owl-nav button{
+                        color: white;
+                        background-color: #eb4d4b;
+                        border-radius: 50%;
+                        width: 35px;
+                        height: 35px;
+                        opacity: 1;
+                        margin-top: 20px;
+                        transition: 0.5s;
+                        &:hover{
+                            background-color: #232323;
+                        }
+                        &:first-child{
+                            position: absolute;
+                            left: -20px;
+                            top:40px;
+                        }
+                        &:nth-child(2){
+                            position: absolute;
+                            right: -20px;
+                            top:40px;
                         }
                     }
                     .description-reviews{
@@ -87,6 +86,7 @@ section#product-detail{
                                 }
                             }
                             .sect-down{
+                                padding: 20px 0 0;
                                 p{
                                     font-size: 14px;
                                     color: #666;
